# tests

./: .gitignore  Jenkinsfile  asciitable.txt
asm/osx/: hello.64.asm
c/: .gitignore  bufferoverflow.c  classish.c  dp.c  readargs.c  types.c
c++/openmp/: Makefile  hello.cpp  simple  simple.cpp
c++/option_parser/: Makefile  main.cc  options.cc  options.h
c/ambiguous_queue/: list.c  list.h
c/cgen/: cgen.c  test.asm
c/cmysql/: Makefile  main.c
c/endiantest/: endiantest  endiantest.c
c/swedish_c/: hej  hej.c  swedish.h
c/totp/: sha1.c  sha1.h  totp  totp.c  totp.h
c/wraparound/: wraparound.c
c_preprocessor/: iterator.c  test.afterpre.c  test.c
c_preprocessor/__counter__/: main.c  main.cpp.c  main.h  other.c  other.h
esp8266/packetsniffer/: platformio.ini
haskell/: .#iomonad.hs  assertEqualIO.hs  challenge.hs  datatype_structured.hs  iomonad.hs  json_parser.hs  matrices.hs  network.hs  own_rb_tree.hs  patterns.hs  red-black-trees.hs
nodejs/socket.io/: app.js  index.html
protobuf/multifile/: .#messages.proto  humidity.proto  messages.proto  preprotoc.py  temperature.proto
protoc/: amazonbutton.pb.cc  amazonbutton.pb.h  amazonbutton.proto
python/: decorators.py  indention.py
python/asyncio/: README.md  asyncio_task.py  basic.py  pyproject.toml
python/callable_class/: callable_class.py
python/credential_management/: config.schema.json  credential_manager.py
python/ctypes/: cfunctions.c  cfunctions.h  dostuff.py  makefile  test_dostuff.py
python/packaging/: README.md  mytestproject.py  pyproject.toml
python/socket/: tcpecho.py  (+4 more)
(+43 files in other folders)
